tests/rename/should_fail/T18740a.hs
module T18740a where

x = Int
